--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -1,12 +1,154 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rGN-zt-Ql9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="z4x-ag-Rk5">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Tutorial View Controller-->
+        <scene sceneID="WS3-vN-ivm">
+            <objects>
+                <viewController storyboardIdentifier="TutorialViewController" id="z4x-ag-Rk5" customClass="TutorialViewController" customModule="DormitoryForDelivery" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="44Y-Wy-fnm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hTs-XE-W4r">
+                                <rect key="frame" x="0.0" y="44" width="414" height="682"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="auG-BP-tQ5">
+                                    <size key="itemSize" width="414" height="684"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TutorialCollectionViewCell" id="tQO-8Q-WpM" customClass="TutorialCollectionViewCell" customModule="DormitoryForDelivery" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="-1" width="414" height="684"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="CGP-ue-tsv">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="684"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="qof-DQ-dAX">
+                                                    <rect key="frame" x="0.0" y="1" width="414" height="520"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="sAw-Nl-EOb">
+                                                    <rect key="frame" x="20" y="521" width="374" height="143"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rsdaddsdsdasdsdasdsadsddasdasds" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZRB-I5-dPO">
+                                                            <rect key="frame" x="0.0" y="0.0" width="374" height="84.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ㅇㅇㄹㄹㅇㄹㅇㄹㅇㄴㄹㅇㄴㄹㅇㄴㄹㅇㄹㄹㅇㄹㅇㄴㄹㅇㄴㄹㄴㄹㅇ" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lT-84-zZt">
+                                                            <rect key="frame" x="0.0" y="100.5" width="374" height="42.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" systemColor="systemBlueColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="ZRB-I5-dPO" secondAttribute="trailing" id="2aT-yk-qlS"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ZRB-I5-dPO" secondAttribute="trailing" id="Ifm-le-of2"/>
+                                                        <constraint firstItem="ZRB-I5-dPO" firstAttribute="leading" secondItem="sAw-Nl-EOb" secondAttribute="leading" id="gUj-xa-srG"/>
+                                                        <constraint firstItem="ZRB-I5-dPO" firstAttribute="leading" secondItem="sAw-Nl-EOb" secondAttribute="leading" id="kHm-yp-u3k"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="sAw-Nl-EOb" secondAttribute="bottom" constant="20" id="9kM-cA-eEI"/>
+                                                <constraint firstItem="sAw-Nl-EOb" firstAttribute="leading" secondItem="CGP-ue-tsv" secondAttribute="leading" constant="20" id="Ixg-UJ-Ntf"/>
+                                                <constraint firstItem="sAw-Nl-EOb" firstAttribute="top" secondItem="qof-DQ-dAX" secondAttribute="bottom" id="JGR-7Q-3LR"/>
+                                                <constraint firstAttribute="trailing" secondItem="sAw-Nl-EOb" secondAttribute="trailing" constant="20" id="Vsv-v2-eik"/>
+                                                <constraint firstItem="sAw-Nl-EOb" firstAttribute="top" secondItem="qof-DQ-dAX" secondAttribute="bottom" id="bMN-g2-DEV"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="414" height="684"/>
+                                        <connections>
+                                            <outlet property="TutorialImage" destination="qof-DQ-dAX" id="ckH-q5-LM2"/>
+                                            <outlet property="TutorialMainLable" destination="ZRB-I5-dPO" id="3a4-WJ-sMZ"/>
+                                            <outlet property="TutorialSubLable" destination="1lT-84-zZt" id="a30-ru-2g7"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="z4x-ag-Rk5" id="upG-WQ-jQM"/>
+                                    <outlet property="delegate" destination="z4x-ag-Rk5" id="wcN-EX-UPc"/>
+                                </connections>
+                            </collectionView>
+                            <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="MGJ-1L-gIx">
+                                <rect key="frame" x="149.5" y="751" width="115.5" height="26"/>
+                                <color key="pageIndicatorTintColor" systemColor="opaqueSeparatorColor"/>
+                                <color key="currentPageIndicatorTintColor" systemColor="labelColor"/>
+                            </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0s-Eg-B3q">
+                                <rect key="frame" x="229" y="785" width="150" height="50"/>
+                                <color key="backgroundColor" systemColor="linkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="1Su-KP-9XC"/>
+                                    <constraint firstAttribute="width" constant="150" id="krJ-3p-84y"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="건너뛰기">
+                                    <backgroundConfiguration key="background" cornerRadius="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="NextButtonClicked:" destination="z4x-ag-Rk5" eventType="touchUpInside" id="blE-OU-uFw"/>
+                                    <action selector="NextToButton:" destination="z4x-ag-Rk5" eventType="touchUpInside" id="3gI-RO-ZDf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPI-nS-8Du">
+                                <rect key="frame" x="35" y="785" width="150" height="50"/>
+                                <color key="backgroundColor" systemColor="linkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="6R3-PU-MKX"/>
+                                    <constraint firstAttribute="height" constant="50" id="RND-27-XtC"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="다음">
+                                    <backgroundConfiguration key="background" cornerRadius="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="NextButtonClicked:" destination="z4x-ag-Rk5" eventType="touchUpInside" id="qdU-TO-RRr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="trQ-bI-E3v"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hTs-XE-W4r" firstAttribute="leading" secondItem="trQ-bI-E3v" secondAttribute="leading" id="4Nr-T8-JeJ"/>
+                            <constraint firstItem="hTs-XE-W4r" firstAttribute="trailing" secondItem="trQ-bI-E3v" secondAttribute="trailing" id="CsV-RG-6Bb"/>
+                            <constraint firstItem="trQ-bI-E3v" firstAttribute="bottom" secondItem="SPI-nS-8Du" secondAttribute="bottom" constant="27" id="Ige-ZP-OiJ"/>
+                            <constraint firstItem="trQ-bI-E3v" firstAttribute="trailing" secondItem="s0s-Eg-B3q" secondAttribute="trailing" constant="35" id="Phv-Mu-pb7"/>
+                            <constraint firstItem="hTs-XE-W4r" firstAttribute="top" secondItem="trQ-bI-E3v" secondAttribute="top" id="R8e-St-ia1"/>
+                            <constraint firstItem="SPI-nS-8Du" firstAttribute="top" secondItem="MGJ-1L-gIx" secondAttribute="bottom" constant="8" symbolic="YES" id="YI9-jP-bRj"/>
+                            <constraint firstItem="MGJ-1L-gIx" firstAttribute="top" secondItem="hTs-XE-W4r" secondAttribute="bottom" constant="25" id="Z0x-wZ-IiU"/>
+                            <constraint firstItem="MGJ-1L-gIx" firstAttribute="centerX" secondItem="trQ-bI-E3v" secondAttribute="centerX" id="ajv-Pd-eaF"/>
+                            <constraint firstItem="trQ-bI-E3v" firstAttribute="bottom" secondItem="s0s-Eg-B3q" secondAttribute="bottom" constant="27" id="hhm-7d-KEd"/>
+                            <constraint firstItem="SPI-nS-8Du" firstAttribute="leading" secondItem="trQ-bI-E3v" secondAttribute="leading" constant="35" id="vDe-ah-C8R"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="CollectionView" destination="hTs-XE-W4r" id="m4g-bq-WoX"/>
+                        <outlet property="NextButton" destination="SPI-nS-8Du" id="fdC-2R-pI3"/>
+                        <outlet property="NextToPage" destination="s0s-Eg-B3q" id="qSM-nj-6DP"/>
+                        <outlet property="PageController" destination="MGJ-1L-gIx" id="38d-Yx-peI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yqN-uk-2kK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2078.2608695652175" y="-421.20535714285711"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="BqH-Hu-8TP">
             <objects>
@@ -62,4 +204,21 @@
             <point key="canvasLocation" x="-269" y="-200"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
